<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Income Calculator</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="payment_term">Payment term</string>
    <string name="amount">Amount</string>
    <string name="hours_per_day">Hours per day</string>
    <string name="days_per_week">Days per week</string>
    <string name="holidays">Holiday (days)</string>
    <string name="repay_student_loan">Repay student loan</string>
    <string name="calculate">Calculate</string>
    <string name="gross_income">Gross income</string>
    <string name="income_tax">Income tax</string>
    <string name="national_insurance">National insurance</string>
    <string name="student_loan">Student loan</string>
    <string name="total_deductions">Total deductions</string>
    <string name="net_income">Net income</string>
    <string name="currency_format">#,###,###,##0.00</string>
    <string name="invalid_amount">Please enter the amount you earn</string>
    <string name="invalid_holiday">No holiday? Poor you!</string>
	<string-array name="payment_terms">
	    <item>Annually</item>
	    <item>Monthly</item>
	    <item>Weekly</item>
	    <item>Daily</item>
	    <item>Hourly</item>
	</string-array>
	<string-array name="days_per_week">
	    <item>1</item>
	    <item>2</item>
	    <item>3</item>
	    <item>4</item>
	    <item>5</item>
	    <item>6</item>
	    <item>7</item>
	</string-array>
	<string name="language">Change language</string>
	<string name="language_summary">Change the application\'s interface language</string>
	<string-array name="languages">
	    <item name="english">English</item>
	    <item name="simplified_chinese">简体中文</item>
	    <item name="traditional_chinese">繁體中文</item>
	    <item name="vietnamese">Tiếng Việt</item>
	</string-array>
	<string-array name="languages_values">
	    <item name="english">en</item>
	    <item name="simplified_chinese">zh</item>
	    <item name="traditional_chinese">zh_HK</item>
	    <item name="vietnamese">vn</item>
	</string-array>
</resources>