<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_term"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/paymentTermSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/payment_terms" >
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/amountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="300" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_per_day"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TimePicker
            android:id="@+id/hoursPerDayTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_per_week"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/daysPerWeekSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/days_per_week" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holidays"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText android:id="@+id/holidaysInput"
            android:text="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <CheckBox
            android:id="@+id/repayStudentLoanCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repay_student_loan" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />
    </LinearLayout>

</ScrollView>